[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Scripts/CamLimites.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 170, 360 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 290, 360 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 290, 360 )

[node name="CamLimites" type="Node2D"]
script = ExtResource( 1 )

[node name="CentArea" type="Area2D" parent="."]

[node name="CollBox" type="CollisionShape2D" parent="CentArea"]
shape = SubResource( 1 )

[node name="EsqArea" type="Area2D" parent="."]
position = Vector2( -640, 0 )

[node name="CollBox" type="CollisionShape2D" parent="EsqArea"]
shape = SubResource( 2 )

[node name="DirArea" type="Area2D" parent="."]
position = Vector2( 640, 0 )

[node name="CollBox" type="CollisionShape2D" parent="DirArea"]
shape = SubResource( 3 )

[node name="Cam" type="Camera2D" parent="."]
current = true
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = true
smoothing_speed = 1.5
drag_margin_left = 1.0
drag_margin_top = 1.0
drag_margin_right = 1.0
drag_margin_bottom = 1.0
[connection signal="area_entered" from="CentArea" to="." method="_on_CentArea_area_entered"]
[connection signal="area_exited" from="CentArea" to="." method="_on_CentArea_area_exited"]
[connection signal="area_entered" from="EsqArea" to="." method="_on_EsqArea_area_entered"]
[connection signal="area_entered" from="DirArea" to="." method="_on_DirArea_area_entered"]
